--- a/assets/views/median/stylesheets.haml
+++ b/assets/views/median/stylesheets.haml
@@ -1,1 +1,2 @@
 %link{rel: "stylesheet", type:"text/css", href: url("/assets/median/median.css")}
+%link{href: "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel: "stylesheet", integrity: "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin: "anonymous"}
