--- a/assets/views/median/stylesheets.haml
+++ b/assets/views/median/stylesheets.haml
@@ -1,2 +1,3 @@
 %link{href: "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel: "stylesheet", integrity: "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin: "anonymous"}
 %link{rel: "stylesheet", type:"text/css", href: url("/assets/median/median.css")}
+%link{rel: "stylesheet", type:"text/css", href: url("http://www.dashery.co.uk/css/search.css")}
