--- a/assets/views/median/page.haml
+++ b/assets/views/median/page.haml
@@ -1,31 +1,32 @@
 = haml :header, layout: false
-- if @page.intro_image
-  %figure.intro
-    %h1= @page.heading
-    %img(src="#{@page.intro_image}")
-#content
-  ~ @page.to_html(self, !!@page.intro_image)
-  - if @page.canonical_url
-    - link_text = @page.metadata('Canonical Name') || @page.canonical_url
-    %p.republished
-      This post was originally featured over at
-      %a{ href: @page.canonical_url }= link_text
-      and is being republished here.
-
-  - if @page.metadata('author')
-    .author
-      - if author_avatar
-        %img.avatar{src: author_avatar}
-      %h2= author_full_name
-      = author_biography
-  = haml :summaries, :layout => false, :locals => { :pages => @page.pages, :heading => :h3 }
-
-  - if @page.articles.empty?
-    - if @page.filename =~ %r{/pages/index\.md}
-      %section.articles= article_summaries(latest_articles)
-  - else
-    %section.articles
-      = haml :summaries, :layout => false, :locals => { :pages => @page.articles, :heading => :h3 }
-  - if ENV["FACEBOOK_APP_ID"]
-    .fb-comments(data-width="100%" data-numposts="5" data-colorscheme="light")
-= haml :footer, layout: false
+.container
+  - if @page.intro_image
+    %figure.intro
+      %h1= @page.heading
+      %img(src="#{@page.intro_image}")
+  #content
+    ~ @page.to_html(self, !!@page.intro_image)
+    - if @page.canonical_url
+      - link_text = @page.metadata('Canonical Name') || @page.canonical_url
+      %p.republished
+        This post was originally featured over at
+        %a{ href: @page.canonical_url }= link_text
+        and is being republished here.
+  
+    - if @page.metadata('author')
+      .author
+        - if author_avatar
+          %img.avatar{src: author_avatar}
+        %h2= author_full_name
+        = author_biography
+    = haml :summaries, :layout => false, :locals => { :pages => @page.pages, :heading => :h3 }
+  
+    - if @page.articles.empty?
+      - if @page.filename =~ %r{/pages/index\.md}
+        %section.articles= article_summaries(latest_articles)
+    - else
+      %section.articles
+        = haml :summaries, :layout => false, :locals => { :pages => @page.articles, :heading => :h3 }
+    - if ENV["FACEBOOK_APP_ID"]
+      .fb-comments(data-width="100%" data-numposts="5" data-colorscheme="light")
+  = haml :footer, layout: false
