--- a/assets/stylesheets/median/median.scss
+++ b/assets/stylesheets/median/median.scss
@@ -83,15 +83,13 @@ pre > code {
   }
 }
 
-section.header {
-  height: 65px;
-  border-bottom: 1px solid #ddd;
-  h1 {
-    padding: 0;
+nav {
+  .container {
+    margin-bottom: 0;
+  }
+  
+  ul li {
     margin: 0;
-    text-align: center;
-    font-size: 25px;
-    line-height: 65px;
   }
 }
 
