--- a/assets/views/median/header.haml
+++ b/assets/views/median/header.haml
@@ -9,7 +9,7 @@
       %a.navbar-brand.dashery{:href => "/"} Dashery
     #bs-example-navbar-collapse-1.collapse.navbar-collapse.navbar-right
       %ul.nav.navbar-nav
-        %li.active
-          %a{:href => "/"} Home
         %li
-          %a{:href => "https://dasherydev.wordpress.com/"} Blog
+          %a{:href => "/"} Home
+        %li.active
+          %a{:href => "/blog"} Blog
