Using specific container class so as not to clash with bootstrap.

--- a/assets/views/median/page.haml
+++ b/assets/views/median/page.haml
@@ -1,5 +1,5 @@
 = haml :header, layout: false
-.container
+.container-content-focus
   - if @page.intro_image
     %figure.intro
       %h1= @page.heading
