--- a/assets/stylesheets/median/median.scss
+++ b/assets/stylesheets/median/median.scss
@@ -69,7 +69,7 @@ pre > code {
   display: block;
 }
 
-.container {
+.container-content-focus {
   margin-bottom: 3em;
 }
 
@@ -86,6 +86,7 @@ pre > code {
 nav {
   font-family: 'Noto Sans', sans-serif;
   font-size: 14px;
+  margin-bottom: 0px;
   
   .dashery {
     font-family: 'Merriweather', serif;
