Fixed to add margin-bottom to navbar.

--- a/assets/stylesheets/median/median.scss
+++ b/assets/stylesheets/median/median.scss
@@ -86,7 +86,9 @@ pre > code {
 nav {
   font-family: 'Noto Sans', sans-serif;
   font-size: 14px;
-  margin-bottom: 0px;
+  .navbar {
+    margin-bottom: 0px;
+  }
   
   .dashery {
     font-family: 'Merriweather', serif;
