--- a/assets/stylesheets/median/median.scss
+++ b/assets/stylesheets/median/median.scss
@@ -86,8 +86,9 @@ pre > code {
 nav {
   font-family: 'Noto Sans', sans-serif;
   font-size: 14px;
+  
   .navbar {
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
   
   .dashery {
