--- a/assets/views/median/atom.haml
+++ b/assets/views/median/atom.haml
@@ -1,10 +1,10 @@
 !!! XML
 %feed(xmlns='http://www.w3.org/2005/Atom')
   %title(type='text')= @title
-  %generator(uri='http://effectif.com/nesta') Nesta
+  %generator(uri='http://nestacms.com') Nesta
   %id= atom_id
-  %link(href="#{base_url}/articles.xml" rel='self')
-  %link(href=base_url rel='alternate')
+  %link(href="#{path_to('/articles.xml', :uri => true)}" rel='self')
+  %link(href="#{path_to('/', :uri => true)}" rel='alternate')
   %subtitle(type='text')= @subtitle
   - if @articles[0]
     %updated= @articles[0].date(:xmlschema)
@@ -18,12 +18,11 @@
         %email= @author['email']
   - @articles.each do |article|
     %entry
-      %title= article.title
-      %link{ :href => url_for(article), :type => 'text/html', :rel => 'alternate' }
+      %title= article.heading
+      %link{ :href => path_to(article.path, :uri => true), :type => 'text/html', :rel => 'alternate' }
       %id= atom_id(article)
       %content(type='html')&= find_and_preserve(absolute_urls(article.body(self)))
       %published= article.date(:xmlschema)
       %updated= article.date(:xmlschema)
       - article.categories.each do |category|
         %category{ :term => category.permalink }
-        
