--- a/assets/views/median/atom.haml
+++ b/assets/views/median/atom.haml
@@ -20,6 +20,8 @@
     %entry
       %title= article.heading
       %link{ :href => path_to(article.path, :uri => true), :type => 'text/html', :rel => 'alternate' }
+      - if @page.intro_image
+        %link(href ="#{@page.intro_image}", rel='image')
       %id= atom_id(article)
       %content(type='html')&= find_and_preserve(absolute_urls(article.body(self)))
       %published= article.date(:xmlschema)
