--- a/assets/views/median/atom.haml
+++ b/assets/views/median/atom.haml
@@ -21,7 +21,7 @@
       %title= article.heading
       %link{ :href => path_to(article.path, :uri => true), :type => 'text/html', :rel => 'alternate' }
       %id= atom_id(article)
-      %summary= article.summary
+      %summary= article.intro_image
       %content(type='html')&= find_and_preserve(absolute_urls(article.body(self)))
       %published= article.date(:xmlschema)
       %updated= article.date(:xmlschema)
